--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
 *~
 *.sw[po]
 *.pyc
-*.opensdf 
-*.sln 
-*.vxproj* 
-*.sdf 
+*.opensdf
+*.sln
+*.vcxproj*
+*.sdf
+*.ilk
+*.exe
+*.lib
+*.obj
+*.pdb
+*.suo
+*/ipch*
+*/obj/*
